Refactor BetterSpawnProtect plugin to use Brigadier API for command registration and enhance documentation